--- a/app/src/main/res/layout/activity_mainhome.xml
+++ b/app/src/main/res/layout/activity_mainhome.xml
@@ -143,4 +143,13 @@
         app:layout_constraintStart_toEndOf="@+id/imageButton3"
         app:srcCompat="@drawable/picc" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="152dp"
+        tools:layout_editor_absoluteY="648dp"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
